--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,11 @@
-[*.{js,yml,json}]
+# top-most EditorConfig file
+root = true
+
+# Unix-style newlines with a newline ending every file
+[*]
 end_of_line = lf
 insert_final_newline = true
-charset = utf-8
-indent_style = space
-trim_trailing_whitespace = true
+
+[*.{js,mjs,astro,ts,css,html,md,json,yml,yaml}]
+indent_style = tab
+indent_size = 2
