--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-	"name": "overlord",
+	"name": "overlord-chat",
 	"version": "1.0.0",
-	"description": "Community bot for Bald Bearded Builder",
 	"main": "dist/index.js",
 	"scripts": {
-		"build": "tsc",
-		"start": "node dist/index.js"
+		"build": "npm run build:compile && npm run build:public",
+		"build:compile": "esbuild src/index.ts --bundle --format=cjs --platform=node --outdir=dist",
+		"build:public": "copyfiles public/* dist/",
+		"start": "node dist/index.js",
+		"lint": "eslint src --ext ts",
+		"format": "npx prettier --write \"src/**/*.ts\""
 	},
-	"keywords": [
-		"twitch",
-		"chatbot",
-		"discord"
-	],
 	"author": "Michael Jolley <mike@baldbeardedbuilder.com>",
 	"devDependencies": {
-		"typescript": "^5.3.3"
+		"@types/mocha": "^10.0.6",
+		"@types/node": "^20.11.19",
+		"copyfiles": "^2.4.1",
+		"esbuild": "^0.20.1",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"mocha": "^10.3.0",
+		"typescript": "^5.3.3",
+		"zod": "^3.22.4"
+	},
+	"dependencies": {
+		"@fastify/static": "^7.0.1",
+		"@fastify/websocket": "^9.0.0",
+		"fastify": "^4.26.1",
+		"fastify-zod": "^1.4.0"
 	}
 }
