--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
 	"devDependencies": {
 		"@types/mocha": "^10.0.6",
 		"@types/node": "^20.11.19",
+		"@types/ws": "^8.5.10",
 		"copyfiles": "^2.4.1",
 		"esbuild": "^0.20.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"mocha": "^10.3.0",
-		"typescript": "^5.3.3",
-		"zod": "^3.22.4"
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
 		"@fastify/static": "^7.0.1",
 		"@fastify/websocket": "^9.0.0",
-		"fastify": "^4.26.1",
-		"fastify-zod": "^1.4.0"
+		"fastify": "^4.26.1"
 	}
 }
