Doing that voodoo that we do

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "eslint src --ext ts",
 		"format": "npx prettier --write \"src/**/*.ts\"",
 		"dev": "nodemon -e js,htm,css,ts,mp3 --watch src --watch public --exec \"pnpm run dev:start\"",
-		"dev:start": "pnpm run build && pnpm run start"
+		"dev:start": "pnpm run build && node dist/index.js localhost"
 	},
 	"author": "Michael Jolley <mike@baldbeardedbuilder.com>",
 	"devDependencies": {
