--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
 	"scripts": {
 		"build": "pnpm run build:compile && pnpm run build:public",
 		"build:compile": "esbuild src/index.ts --bundle --format=cjs --platform=node --outdir=dist",
-		"build:public": "copyfiles \"public/**/*\" dist/",
+		"build:public": "copyfiles -u 1 \"src/web/**/*\" dist/",
 		"start": "node dist/index.js",
 		"lint": "eslint src --ext ts",
 		"format": "npx prettier --write \"src/**/*.ts\"",
-		"dev": "nodemon -e js,htm,css,ts,mp3 --watch src --watch public --exec \"pnpm run dev:start\"",
-		"dev:start": "pnpm run build && node dist/index.js localhost"
+		"dev": "nodemon -e js,htm,css,ts,mp3 --watch src --exec \"pnpm run dev:start\"",
+		"dev:start": "pnpm run build && node --env-file=.env dist/index.js localhost"
 	},
 	"author": "Michael Jolley <mike@baldbeardedbuilder.com>",
 	"devDependencies": {
 		"@types/mocha": "^10.0.6",
 		"@types/node": "^20.11.19",
+		"@types/tmi.js": "^1.8.6",
 		"@types/ws": "^8.5.10",
 		"copyfiles": "^2.4.1",
 		"esbuild": "^0.20.1",
@@ -28,6 +29,8 @@
 	"dependencies": {
 		"@fastify/static": "^7.0.1",
 		"@fastify/websocket": "^9.0.0",
-		"fastify": "^4.26.1"
+		"comfy.js": "^1.1.16",
+		"fastify": "^4.26.1",
+		"ws": "^8.16.0"
 	}
 }
