--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@types/mocha": "^10.0.6",
 		"@types/node": "^20.11.19",
+		"@types/sanitize-html": "^2.11.0",
 		"@types/tmi.js": "^1.8.6",
 		"@types/ws": "^8.5.10",
 		"copyfiles": "^2.4.1",
@@ -31,6 +32,7 @@
 		"@fastify/websocket": "^9.0.0",
 		"comfy.js": "^1.1.16",
 		"fastify": "^4.26.1",
+		"sanitize-html": "^2.13.0",
 		"ws": "^8.16.0"
 	}
 }
