--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"@fastify/static": "^7.0.1",
 		"@fastify/websocket": "^9.0.0",
+		"@supabase/supabase-js": "^2.46.1",
 		"comfy.js": "^1.1.16",
 		"fastify": "^4.26.1",
 		"sanitize-html": "^2.13.0",
