Working on better spotify API handling

--- a/.env-sample
+++ b/.env-sample
@@ -7,4 +7,5 @@ TWITCH_BOT_AUTH_TOKEN=
 PALLYGG_API_KEY=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
-SPOTIFY_API_KEY=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
